--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "koa": "^1.2.0",
     "koa-bodyparser": "^2.0.1",
     "koa-mongo": "^0.5.0",
-    "koa-mongoose": "^1.0.9"
+    "koa-mongoose": "^1.0.9",
+    "koa-router": "^5.4.0"
   }
 }
