--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "jsonwebtoken": "^6.2.0",
     "koa": "^1.2.0",
     "koa-bodyparser": "^2.0.1",
     "koa-mongo": "^0.5.0",
